...
                android:textSize="@dimen/font_big"
                android:textStyle="bold"
                android:layout_margin="@dimen/spacing_large"
                android:textColor="@color/black"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pokemon_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:layout_gravity="center_horizontal"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
...
