...
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/spacing_small"
                        android:padding="@dimen/spacing_normal">

                        <TextView
                            android:id="@+id/pokemon_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/spacing_small"
                            android:textColor="@color/white"
                            android:textSize="@dimen/font_big"
                            android:textStyle="bold"
...
